--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "mealstogo",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "lint": "eslint . --ext .js"
-    },
-    "dependencies": {
-        "expo": "~49.0.15",
-        "expo-status-bar": "~1.6.0",
-        "react": "18.2.0",
-        "react-native": "0.72.6",
-        "react-native-paper": "^5.11.4",
-        "styled-components": "^6.1.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@react-native-community/eslint-config": "^3.2.0",
-        "eslint": "^8.56.0",
-        "prettier": "2.8.8"
-    },
-    "private": true
+  "name": "mealstogo",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
+  },
+  "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
+    "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-paper": "^5.11.4",
+    "styled-components": "^6.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.56.0",
+    "prettier": "2.8.8"
+  },
+  "private": true
 }
